--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -2,7 +2,7 @@
     Renders product media
 
     Accepts:
-    - media: {Object} Product Media object
+    - media: {Object} Product Media <slider-component
     - loop: {Boolean} Enable video looping (optional)
     - variant_image: {Boolean} Whether or not media is associated with a variant
 
