--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -441,7 +441,7 @@
                   {%- endif -%}
                 </div>
               {%- when 'popup' -%}
-                <modal-opener
+                {% comment <modal-opener
                   class="product-popup-modal__opener quick-add-hidden"
                   data-modal="#PopupModal-{{ block.id }}"
                   {{ block.shopify_attributes }}
@@ -454,7 +454,7 @@
                   >
                     {{ block.settings.text | default: block.settings.page.title | escape }}
                   </button>
-                </modal-opener>
+                </modal-opener> 
               {%- when 'share' -%}
                 {% liquid
                   assign share_url = product.selected_variant.url | default: product.url | prepend: request.origin
