--- a/snippets/product-media-gallery.liquid
+++ b/snippets/product-media-gallery.liquid
@@ -1,14 +1,6 @@
 {% comment %}
-  Renders a product media gallery. Should be used with 'media-gallery.js'
-  Also see 'product-media-modal'
-
-  Accepts:
-  - product: {Object} Product liquid object
-  - variant_images: {Array} Product images associated with a variant
-  - limit: {Number} (optional) When passed, limits the number of media items to render
-
-  Usage:
-  {% render 'product-media-gallery' %}
+  Renders a product media gallery with Swiper JS carousel
+  Includes navigation buttons, keyboard controls, and thumbnails
 {% endcomment %}
 
 {%- liquid
@@ -42,6 +34,9 @@
   endif
 -%}
 
+<!-- Load Swiper CSS -->
+{% comment %} {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }} {% endcomment %}
+
 <media-gallery
   id="MediaGallery-{{ section.id }}"
   role="region"
@@ -52,27 +47,17 @@
   data-desktop-layout="{{ section.settings.gallery_layout }}"
 >
   <div id="GalleryStatus-{{ section.id }}" class="visually-hidden" role="status"></div>
-  <slider-component id="GalleryViewer-{{ section.id }}" class="slider-mobile-gutter mySwiper">
-    <a class="skip-to-content-link button visually-hidden quick-add-hidden" href="#ProductInfo-{{ section.id }}">
-      {{ 'accessibility.skip_to_product_info' | t }}
-    </a>
-    <ul
-      id="Slider-Gallery-{{ section.id }}"
-      class="swiper-wrapper product__media-list contains-media grid grid--peek list-unstyled slider slider--mobile"
-      role="list"
-    >
+  
+  <!-- Main Swiper Container -->
+  <div class="swiper main-swiper-{{ section.id }}">
+    <div class="swiper-wrapper">
       {%- if product.selected_or_first_available_variant.featured_media != null -%}
         {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
-        <li
-          id="Slide-{{ section.id }}-{{ featured_media.id }}"
-          class="swiper-slide product__media-item grid__item slider__slide is-active{% if single_media_visible %} product__media-item--single{% endif %}{% if featured_media.media_type != 'image' %} product__media-item--full{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
-          data-media-id="{{ section.id }}-{{ featured_media.id }}"
-        >
-          {%- assign media_position = 1 -%}
+        <div class="swiper-slide">
           {% render 'product-thumbnail',
             media: featured_media,
             media_count: media_count,
-            position: media_position,
+            position: 1,
             desktop_layout: section.settings.gallery_layout,
             mobile_layout: section.settings.mobile_thumbnails,
             loop: section.settings.enable_video_looping,
@@ -83,34 +68,16 @@
             constrain_to_viewport: section.settings.constrain_to_viewport,
             lazy_load: false
           %}
-        </li>
+        </div>
       {%- endif -%}
+      
       {%- for media in product.media -%}
-        {% if media_position >= limit
-          or media_position >= 1
-          and section.settings.hide_variants
-          and variant_images contains media.src
-        %}
-          {% continue %}
-        {% endif %}
-
         {%- unless media.id == product.selected_or_first_available_variant.featured_media.id -%}
-          <li
-            id="Slide-{{ section.id }}-{{ media.id }}"
-            class="product__media-item grid__item swiper-slide slider__slide{% if single_media_visible %} product__media-item--single{% endif %}{% if product.selected_or_first_available_variant.featured_media == nil and forloop.index == 1 %} is-active{% endif %}{% if media.media_type != 'image' %} product__media-item--full{% endif %}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--fade-in{% endif %}"
-            data-media-id="{{ section.id }}-{{ media.id }}"
-          >
-            {%- liquid
-              assign media_position = media_position | default: 0 | plus: 1
-              assign lazy_load = false
-              if media_position > 1
-                assign lazy_load = true
-              endif
-            -%}
+          <div class="swiper-slide">
             {% render 'product-thumbnail',
               media: media,
               media_count: media_count,
-              position: media_position,
+              position: forloop.index,
               desktop_layout: section.settings.gallery_layout,
               mobile_layout: section.settings.mobile_thumbnails,
               loop: section.settings.enable_video_looping,
@@ -119,39 +86,18 @@
               media_width: media_width,
               media_fit: section.settings.media_fit,
               constrain_to_viewport: section.settings.constrain_to_viewport,
-              lazy_load: lazy_load
+              lazy_load: true
             %}
-          </li>
+          </div>
         {%- endunless -%}
       {%- endfor -%}
-    </ul>
-    <div class="slider-buttons quick-add-hidden{% if hide_mobile_slider %} small-hide{% endif %}">
-      <button
-        type="button"
-        class="slider-button slider-button--prev"
-        name="previous"
-        aria-label="{{ 'general.slider.previous_slide' | t }}"
-      >
-        {% render 'icon-caret' %}
-      </button>
-      <div class="slider-counter caption">
-        <span class="slider-counter--current">1</span>
-        <span aria-hidden="true"> / </span>
-        <span class="visually-hidden">{{ 'general.slider.of' | t }}</span>
-        <span class="slider-counter--total">{{ media_count }}</span>
-      </div>
-      <button
-        type="button"
-        class="slider-button slider-button--next"
-        name="next"
-        aria-label="{{ 'general.slider.next_slide' | t }}"
-      >
-        {% render 'icon-caret' %}
-      </button>
     </div>
-  </slider-component>
-  <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+    
+    <!-- Navigation Buttons -->
+    <div class="swiper-button-prev swiper-button-prev-{{ section.id }}"> </div>
+    <div class="swiper-button-next swiper-button-next-{{ section.id }}"> </div>
+  </div>
+
   {%- if first_3d_model -%}
     <button
       class="button button--full-width product__xr-button"
@@ -166,155 +112,157 @@
       {{ 'products.product.xr_button' | t }}
     </button>
   {%- endif -%}
-  {%- liquid
-    assign is_not_limited_to_single_item = false
-    if limit == null or limit > 1
-      assign is_not_limited_to_single_item = true
-    endif
-  -%}
-  {%- if is_not_limited_to_single_item
-    and media_count > 1
-    and section.settings.gallery_layout contains 'thumbnail'
-    or section.settings.mobile_thumbnails == 'show'
-  -%}
-    <slider-component
-      id="GalleryThumbnails-{{ section.id }}"
-      class="thumbnail-slider slider-mobile-gutter quick-add-hidden{% unless section.settings.gallery_layout contains 'thumbnail' %} medium-hide large-up-hide{% endunless %}{% if section.settings.mobile_thumbnails != 'show' %} small-hide{% endif %}{% if media_count <= 3 %} thumbnail-slider--no-slide{% endif %}"
-    >
-      <button
-        type="button"
-        class="slider-button slider-button--prev{% if media_count <= 3 %} small-hide{% endif %}{% if media_count <= 4 %} medium-hide large-up-hide{% endif %}"
-        name="previous"
-        aria-label="{{ 'general.slider.previous_slide' | t }}"
-        aria-controls="GalleryThumbnails-{{ section.id }}"
-        data-step="3"
-      >
-        {% render 'icon-caret' %}
-      </button>
-      <ul
-        id="Slider-Thumbnails-{{ section.id }}"
-        class="thumbnail-list list-unstyled slider slider--mobile{% if section.settings.gallery_layout == 'thumbnail_slider' %} slider--tablet-up{% endif %}"
-      >
-        {%- capture sizes -%}
-          (min-width: {{ settings.page_width }}px) calc(({{ settings.page_width | minus: 100 | times: media_width | round }} - 4rem) / 4),
-          (min-width: 990px) calc(({{ media_width | times: 100 }}vw - 4rem) / 4),
-          (min-width: 750px) calc((100vw - 15rem) / 8),
-          calc((100vw - 8rem) / 3)
-        {%- endcapture -%}
 
-        {%- if featured_media != null -%}
-          {%- liquid
-            capture media_index
-              if featured_media.media_type == 'model'
-                increment model_index
-              elsif featured_media.media_type == 'video' or featured_media.media_type == 'external_video'
-                increment video_index
-              elsif featured_media.media_type == 'image'
-                increment image_index
-              endif
-            endcapture
-            assign media_index = media_index | plus: 1
-          -%}
-          <li
-            id="Slide-Thumbnails-{{ section.id }}-0"
-            class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains featured_media.src %} thumbnail-list_item--variant{% endif %}"
-            data-target="{{ section.id }}-{{ featured_media.id }}"
-            data-media-position="{{ media_index }}"
-          >
-            {%- capture thumbnail_id -%}
-              Thumbnail-{{ section.id }}-0
-            {%- endcapture -%}
-            <button
-              class="thumbnail global-media-settings global-media-settings--no-shadow"
-              aria-label="{%- if featured_media.media_type == 'image' -%}{{ 'products.product.media.load_image' | t: index: media_index }}{%- elsif featured_media.media_type == 'model' -%}{{ 'products.product.media.load_model' | t: index: media_index }}{%- elsif featured_media.media_type == 'video' or featured_media.media_type == 'external_video' -%}{{ 'products.product.media.load_video' | t: index: media_index }}{%- endif -%}"
-              aria-current="true"
-              aria-controls="GalleryViewer-{{ section.id }}"
-              aria-describedby="{{ thumbnail_id }}"
-            >
-              {{
-                featured_media.preview_image
-                | image_url: width: 416
-                | image_tag:
-                  loading: 'lazy',
-                  sizes: sizes,
-                  widths: '54, 74, 104, 162, 208, 324, 416',
-                  id: thumbnail_id,
-                  alt: featured_media.alt
-                | escape
-              }}
-            </button>
-          </li>
+  <!-- Thumbnail Swiper -->
+  {%- if media_count > 1 -%}
+    <div class="swiper swiper-thumbs-{{ section.id }}">
+      <div class="swiper-wrapper">
+        {%- if product.selected_or_first_available_variant.featured_media != null -%}
+          {%- assign featured_media = product.selected_or_first_available_variant.featured_media -%}
+          <div class="swiper-slide">
+            {{ featured_media.preview_image | image_url: width: 200 | image_tag:
+              loading: 'lazy',
+              sizes: '200px',
+              widths: '200',
+              alt: featured_media.alt | escape
+            }}
+          </div>
         {%- endif -%}
+        
         {%- for media in product.media -%}
           {%- unless media.id == product.selected_or_first_available_variant.featured_media.id -%}
-            {%- liquid
-              capture media_index
-                if media.media_type == 'model'
-                  increment model_index
-                elsif media.media_type == 'video' or media.media_type == 'external_video'
-                  increment video_index
-                elsif media.media_type == 'image'
-                  increment image_index
-                endif
-              endcapture
-              assign media_index = media_index | plus: 1
-            -%}
-            <li
-              id="Slide-Thumbnails-{{ section.id }}-{{ forloop.index }}"
-              class="thumbnail-list__item slider__slide{% if section.settings.hide_variants and variant_images contains media.src %} thumbnail-list_item--variant{% endif %}"
-              data-target="{{ section.id }}-{{ media.id }}"
-              data-media-position="{{ media_index }}"
-            >
-              {%- if media.media_type == 'model' -%}
-                <span class="thumbnail__badge" aria-hidden="true">
-                  {%- render 'icon-3d-model' -%}
-                </span>
-              {%- elsif media.media_type == 'video' or media.media_type == 'external_video' -%}
-                <span class="thumbnail__badge" aria-hidden="true">
-                  {%- render 'icon-play' -%}
-                </span>
-              {%- endif -%}
-              {%- capture thumbnail_id -%}
-                Thumbnail-{{ section.id }}-{{ forloop.index }}
-              {%- endcapture -%}
-              <button
-                class="thumbnail global-media-settings global-media-settings--no-shadow"
-                aria-label="{%- if media.media_type == 'image' -%}{{ 'products.product.media.load_image' | t: index: media_index }}{%- elsif media.media_type == 'model' -%}{{ 'products.product.media.load_model' | t: index: media_index }}{%- elsif media.media_type == 'video' or media.media_type == 'external_video' -%}{{ 'products.product.media.load_video' | t: index: media_index }}{%- endif -%}"
-                {% if media == product.selected_or_first_available_variant.featured_media
-                  or product.selected_or_first_available_variant.featured_media == null
-                  and forloop.index == 1
-                %}
-                  aria-current="true"
-                {% endif %}
-                aria-controls="GalleryViewer-{{ section.id }}"
-                aria-describedby="{{ thumbnail_id }}"
-              >
-                {{
-                  media.preview_image
-                  | image_url: width: 416
-                  | image_tag:
-                    loading: 'lazy',
-                    sizes: sizes,
-                    widths: '54, 74, 104, 162, 208, 324, 416',
-                    id: thumbnail_id,
-                    alt: media.alt
-                  | escape
-                }}
-              </button>
-            </li>
+            <div class="swiper-slide">
+              {{ media.preview_image | image_url: width: 150 | image_tag:
+                loading: 'lazy',
+                sizes: '150px',
+                widths: '150',
+                alt: media.alt | escape
+              }}
+            </div>
           {%- endunless -%}
         {%- endfor -%}
-      </ul>
-      <button
-        type="button"
-        class="slider-button slider-button--next{% if media_count <= 3 %} small-hide{% endif %}{% if media_count <= 4 %} medium-hide large-up-hide{% endif %}"
-        name="next"
-        aria-label="{{ 'general.slider.next_slide' | t }}"
-        aria-controls="GalleryThumbnails-{{ section.id }}"
-        data-step="3"
-      >
-        {% render 'icon-caret' %}
-      </button>
-    </slider-component>
+      </div>
+    </div>
   {%- endif -%}
 </media-gallery>
+
+<!-- Load Swiper JS -->
+{% comment %} {{ 'swiper-bundle.min.js' | asset_url | script_tag }} {% endcomment %}
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  // Initialize thumbnails swiper if there are multiple media items
+  {% if media_count > 1 %}
+    const thumbsSwiper = new Swiper('.swiper-thumbs-{{ section.id }}', {
+      spaceBetween: 10,
+      slidesPerView: 'auto',
+      freeMode: true,
+      watchSlidesProgress: true,
+      breakpoints: {
+        320: {
+          slidesPerView: 3,
+          spaceBetween: 8
+        },
+        750: {
+          slidesPerView: 4,
+          spaceBetween: 10
+        },
+        990: {
+          slidesPerView: 5,
+          spaceBetween: 12
+        }
+      }
+    });
+  {% endif %}
+
+  // Initialize main swiper
+  const mainSwiper = new Swiper('.main-swiper-{{ section.id }}', {
+    spaceBetween: 1,
+    navigation: {
+      nextEl: '.swiper-button-next-{{ section.id }}',
+      prevEl: '.swiper-button-prev-{{ section.id }}',
+    },
+    {% if media_count > 1 %}
+    thumbs: {
+      swiper: thumbsSwiper
+    },
+    {% endif %}
+    mousewheel: true,
+    keyboard: true,
+    grabCursor: true
+  });
+});
+</script>
+
+<style>
+/* Main Swiper */
+.main-swiper-{{ section.id }} {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.main-swiper-{{ section.id }} .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Navigation Buttons */
+.swiper-button-prev-{{ section.id }},
+.swiper-button-next-{{ section.id }} {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  transition: opacity 0.3s ease;
+}
+
+.swiper-button-prev-{{ section.id }}:after,
+.swiper-button-next-{{ section.id }}:after {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/* Thumbnail Swiper */
+.swiper-thumbs-{{ section.id }} {
+  height: auto;
+  box-sizing: border-box;
+  padding: 10px 0;
+}
+
+.swiper-thumbs-{{ section.id }} .swiper-slide {
+  width: fit-content;
+  cursor: pointer;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 1.5px solid #e7e5e0;
+  transition: all 0.3s ease;
+   opacity: 1; 
+}
+
+.swiper-thumbs-{{ section.id }} .swiper-slide-thumb-active {
+  opacity: 1;
+  border:1.5px solid #000;
+}
+
+.swiper-thumbs-{{ section.id }} .swiper-slide img {
+  width: 100%;
+  object-fit: cover;
+  height:auto;}
+
+/* Responsive Adjustments */
+@media (max-width: 749px) {
+  .swiper-button-prev-{{ section.id }},
+  .swiper-button-next-{{ section.id }} {
+    width: 30px;
+    height: 30px;
+  }
+  
+  .swiper-thumbs-{{ section.id }} {
+  }
+  
+  .swiper-thumbs-{{ section.id }} .swiper-slide {
+    width: 60px;
+    
+  }
+}
+</style>
